--- a/toDo.html
+++ b/toDo.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>To Do</title>
-    <script defer src="toDo.js"></script>
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!--    <script defer src="toDo.js"></script>-->
+    <script defer src="toDoJQuery.js"></script>
 </head>
 <body>
 <div id="root"></div>
